Linked Google Font
Linked a google font from my HTML document to my css\styles.css

--- a/index.html
+++ b/index.html
@@ -90,10 +90,11 @@
                  <hr>
                  <footer class="footer-nav">
                     <h4>Janette Doe</h4>
-                    <ul class="bottom-nav">                               
-                        <li><a href="#home">HOME</a></li>
-                        <li><a href="#portfolio">PORTFOLIO</a></li>
-                        <li><a href="#contact">CONTACT</a></li>
+                    <ul class="bottom-nav">
+                        <li><a class="back-to-top" href="#home">BACK TO TOP</a></li>                             
+                        <li><a class="normal-bottom-links" href="#home">HOME</a></li>
+                        <li><a class="normal-bottom-links" href="#portfolio">PORTFOLIO</a></li>
+                        <li><a class="normal-bottom-links" href="#contact">CONTACT</a></li>
                     </ul>
                  </footer>
             </div>
